# C3NLP

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
C3NLP/: app.py  chatbot.py  config.py  data_ingestor.py  file_loader.py
src/: app.py  chatbot.py  config.py  data_ingestor.py  file_loader.py
