[project]
name = "C3NLP"
version = "0.1.0"
description = "Talk with your private files using a local LLM"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastembed>=0.5.1",
    "flashrank>=0.2.10",
    "langchain>=0.3.17",
    "langchain-community>=0.3.16",
    "langchain-ollama>=0.2.3",
    "langgraph>=0.2.68",
    "ollama>=0.4.7",
    "pypdfium2>=4.30.1",
    "rank-bm25>=0.2.2",
    "streamlit>=1.41.1"
]

[dependency-groups]
dev = [
    "jupyterlab>=4.3.5",
    "loguru>=0.7.3",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "ruff>=0.4.4",
    "watchdog>=6.0.0"
]
